tests/ui/feature-gates/feature-gate-default-field-values.stderr
error: the `#[default]` attribute may only be used on unit enum variants
  --> $DIR/feature-gate-default-field-values.rs:15:5
   |
LL |     Foo {
   |     ^^^
   |
   = help: consider a manual implementation of `Default`

error: the `#[default]` attribute may only be used on unit enum variants
  --> $DIR/feature-gate-default-field-values.rs:55:5
   |
LL |     Variant {
   |     ^^^^^^^
   |
   = help: consider a manual implementation of `Default`

error[E0658]: default values on fields are experimental
  --> $DIR/feature-gate-default-field-values.rs:8:15
   |
LL |     pub bar: S = S,
   |               ^^^^
   |
   = note: see issue #132162 <https://github.com/rust-lang/rust/issues/132162> for more information
   = help: add `#![feature(default_field_values)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: default values on fields are experimental
  --> $DIR/feature-gate-default-field-values.rs:9:17
   |
LL |     pub baz: i32 = 42 + 3,
   |                 ^^^^^^^^^
   |
   = note: see issue #132162 <https://github.com/rust-lang/rust/issues/132162> for more information
   = help: add `#![feature(default_field_values)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: default values on fields are experimental
  --> $DIR/feature-gate-default-field-values.rs:16:15
   |
LL |         bar: S = S,
   |               ^^^^
   |
   = note: see issue #132162 <https://github.com/rust-lang/rust/issues/132162> for more information
   = help: add `#![feature(default_field_values)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: default values on fields are experimental
  --> $DIR/feature-gate-default-field-values.rs:17:17
   |
LL |         baz: i32 = 42 + 3,
   |                 ^^^^^^^^^
   |
   = note: see issue #132162 <https://github.com/rust-lang/rust/issues/132162> for more information
   = help: add `#![feature(default_field_values)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: default values on fields are experimental
  --> $DIR/feature-gate-default-field-values.rs:23:11
   |
LL |     bar: S = Qux::<A, C>::S,
   |           ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #132162 <https://github.com/rust-lang/rust/issues/132162> for more information
   = help: add `#![feature(default_field_values)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: default values on fields are experimental
  --> $DIR/feature-gate-default-field-values.rs:24:13
   |
LL |     baz: i32 = foo(),
   |             ^^^^^^^^
   |
   = note: see issue #132162 <https://github.com/rust-lang/rust/issues/132162> for more information
   = help: add `#![feature(default_field_values)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: default values on fields are experimental
  --> $DIR/feature-gate-default-field-values.rs:25:13
   |
LL |     bat: i32 = <Qux<A, C> as T>::K,
   |             ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #132162 <https://github.com/rust-lang/rust/issues/132162> for more information
   = help: add `#![feature(default_field_values)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: default values on fields are experimental
  --> $DIR/feature-gate-default-field-values.rs:26:13
   |
LL |     bay: i32 = C,
   |             ^^^^
   |
   = note: see issue #132162 <https://github.com/rust-lang/rust/issues/132162> for more information
   = help: add `#![feature(default_field_values)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: default values on fields are experimental
  --> $DIR/feature-gate-default-field-values.rs:27:16
   |
LL |     bak: Vec<A> = Vec::new(),
   |                ^^^^^^^^^^^^^
   |
   = note: see issue #132162 <https://github.com/rust-lang/rust/issues/132162> for more information
   = help: add `#![feature(default_field_values)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: default values on fields are experimental
  --> $DIR/feature-gate-default-field-values.rs:49:17
   |
LL |     optional: () = (),
   |                 ^^^^^
   |
   = note: see issue #132162 <https://github.com/rust-lang/rust/issues/132162> for more information
   = help: add `#![feature(default_field_values)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: default values on fields are experimental
  --> $DIR/feature-gate-default-field-values.rs:57:21
   |
LL |         optional: () = (),
   |                     ^^^^^
   |
   = note: see issue #132162 <https://github.com/rust-lang/rust/issues/132162> for more information
   = help: add `#![feature(default_field_values)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: default values on fields are experimental
  --> $DIR/feature-gate-default-field-values.rs:67:11
   |
LL |     x: i32 = 0,
   |           ^^^^
   |
   = note: see issue #132162 <https://github.com/rust-lang/rust/issues/132162> for more information
   = help: add `#![feature(default_field_values)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: default values on fields are experimental
  --> $DIR/feature-gate-default-field-values.rs:68:11
   |
LL |     y: f32 = 0.0,
   |           ^^^^^^
   |
   = note: see issue #132162 <https://github.com/rust-lang/rust/issues/132162> for more information
   = help: add `#![feature(default_field_values)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:72:21
   |
LL |     let x = Foo { .. };
   |                     ^
   |
help: add `#![feature(default_field_values)]` to the crate attributes to enable default values on `struct` fields
   |
LL + #![feature(default_field_values)]
   |
help: add a base expression here
   |
LL |     let x = Foo { ../* expr */ };
   |                     ++++++++++

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:74:29
   |
LL |     let z = Foo { baz: 1, .. };
   |                             ^
   |
help: add `#![feature(default_field_values)]` to the crate attributes to enable default values on `struct` fields
   |
LL + #![feature(default_field_values)]
   |
help: add a base expression here
   |
LL |     let z = Foo { baz: 1, ../* expr */ };
   |                             ++++++++++

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:80:26
   |
LL |     let x = Bar::Foo { .. };
   |                          ^
   |
help: add `#![feature(default_field_values)]` to the crate attributes to enable default values on `struct` fields
   |
LL + #![feature(default_field_values)]
   |
help: add a base expression here
   |
LL |     let x = Bar::Foo { ../* expr */ };
   |                          ++++++++++

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:82:34
   |
LL |     let z = Bar::Foo { baz: 1, .. };
   |                                  ^
   |
help: add `#![feature(default_field_values)]` to the crate attributes to enable default values on `struct` fields
   |
LL + #![feature(default_field_values)]
   |
help: add a base expression here
   |
LL |     let z = Bar::Foo { baz: 1, ../* expr */ };
   |                                  ++++++++++

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:88:31
   |
LL |     let x = Qux::<i32, 4> { .. };
   |                               ^
   |
help: add `#![feature(default_field_values)]` to the crate attributes to enable default values on `struct` fields
   |
LL + #![feature(default_field_values)]
   |
help: add a base expression here
   |
LL |     let x = Qux::<i32, 4> { ../* expr */ };
   |                               ++++++++++

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:89:73
   |
LL |     assert!(matches!(Qux::<i32, 4> { bar: S, baz: 42, bat: 2, bay: 4, .. }, x));
   |                                                                         ^
   |
help: add `#![feature(default_field_values)]` to the crate attributes to enable default values on `struct` fields
   |
LL + #![feature(default_field_values)]
   |
help: add a base expression here
   |
LL |     assert!(matches!(Qux::<i32, 4> { bar: S, baz: 42, bat: 2, bay: 4, ../* expr */ }, x));
   |                                                                         ++++++++++

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:92:38
   |
LL |     let y = Opt { mandatory: None, .. };
   |                                      ^
   |
help: add `#![feature(default_field_values)]` to the crate attributes to enable default values on `struct` fields
   |
LL + #![feature(default_field_values)]
   |
help: add a base expression here
   |
LL |     let y = Opt { mandatory: None, ../* expr */ };
   |                                      ++++++++++

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:96:47
   |
LL |     assert!(matches!(Opt { mandatory: None, .. }, z));
   |                                               ^
   |
help: add `#![feature(default_field_values)]` to the crate attributes to enable default values on `struct` fields
   |
LL + #![feature(default_field_values)]
   |
help: add a base expression here
   |
LL |     assert!(matches!(Opt { mandatory: None, ../* expr */ }, z));
   |                                               ++++++++++

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:98:30
   |
LL |     assert!(matches!(Opt { .. }, z));
   |                              ^
   |
help: add a base expression here
   |
LL |     assert!(matches!(Opt { ../* expr */ }, z));
   |                              ++++++++++

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:100:44
   |
LL |     assert!(matches!(Opt { optional: (), .. }, z));
   |                                            ^
   |
help: add a base expression here
   |
LL |     assert!(matches!(Opt { optional: (), ../* expr */ }, z));
   |                                            ++++++++++

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:102:61
   |
LL |     assert!(matches!(Opt { optional: (), mandatory: None, .. }, z));
   |                                                             ^
   |
help: remove the `..` as all the fields are already present
   |
LL -     assert!(matches!(Opt { optional: (), mandatory: None, .. }, z));
LL +     assert!(matches!(Opt { optional: (), mandatory: None,  }, z));
   |

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:104:51
   |
LL |     let y = OptEnum::Variant { mandatory: None, .. };
   |                                                   ^
   |
help: add `#![feature(default_field_values)]` to the crate attributes to enable default values on `struct` fields
   |
LL + #![feature(default_field_values)]
   |
help: add a base expression here
   |
LL |     let y = OptEnum::Variant { mandatory: None, ../* expr */ };
   |                                                   ++++++++++

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:108:60
   |
LL |     assert!(matches!(OptEnum::Variant { mandatory: None, .. }, z));
   |                                                            ^
   |
help: add `#![feature(default_field_values)]` to the crate attributes to enable default values on `struct` fields
   |
LL + #![feature(default_field_values)]
   |
help: add a base expression here
   |
LL |     assert!(matches!(OptEnum::Variant { mandatory: None, ../* expr */ }, z));
   |                                                            ++++++++++

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:110:43
   |
LL |     assert!(matches!(OptEnum::Variant { .. }, z));
   |                                           ^
   |
help: add a base expression here
   |
LL |     assert!(matches!(OptEnum::Variant { ../* expr */ }, z));
   |                                           ++++++++++

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:112:57
   |
LL |     assert!(matches!(OptEnum::Variant { optional: (), .. }, z));
   |                                                         ^
   |
help: add a base expression here
   |
LL |     assert!(matches!(OptEnum::Variant { optional: (), ../* expr */ }, z));
   |                                                         ++++++++++

error[E0797]: base expression required after `..`
  --> $DIR/feature-gate-default-field-values.rs:114:74
   |
LL |     assert!(matches!(OptEnum::Variant { optional: (), mandatory: None, .. }, z));
   |                                                                          ^
   |
help: remove the `..` as all the fields are already present
   |
LL -     assert!(matches!(OptEnum::Variant { optional: (), mandatory: None, .. }, z));
LL +     assert!(matches!(OptEnum::Variant { optional: (), mandatory: None,  }, z));
   |

error: aborting due to 31 previous errors

Some errors have detailed explanations: E0658, E0797.
For more information about an error, try `rustc --explain E0658`.
